<resources>
    <string name="app_name">Contacts</string>
    <string name="add">Add</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="enter_name">Enter Name:</string>
    <string name="enter_no">Enter No:</string>
    <string name="update">update</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="are_you_sure_you_want_to_delete_contact">Are you sure you want to delete contact?</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name_add">Enter Name:</string>
    <string name="enter_no_add">Enter No:</string>
</resources>