<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="390dp"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_contact"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textAlignment="center"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="20dp"
        />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_contact"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="20dp"

        />

    <Button
        android:id="@+id/yesdelete"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp"/>
    <Button
        android:id="@+id/nodelete"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textColor="@color/white"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp"/>


</LinearLayout>