<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="390dp"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_contact"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textAlignment="center"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="10dp"

        />
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="75dp"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        android:ems="7"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_no"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:layout_marginStart="75dp"
        android:textAlignment="center"
        android:ems="7"
        android:inputType="number"/>
    <Button
        android:id="@+id/updatebtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/white"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp"/>


</LinearLayout>